--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,8 +11,8 @@
 				"python.testing.pytestArgs": [
 					"."
 				],
-				//"python.pythonPath": ".venv/bin/python",
-				//"python.defaultInterpreterPath": ".venv/bin/python",
+				"python.pythonPath": ".venv/bin/python",
+				"python.defaultInterpreterPath": ".venv/bin/python",
 				"python.terminal.activateEnvInCurrentTerminal": true
 			},
 			"extensions": [
